src/index.css
/*
  #0B0C10
  #1F2833
  #C5C6C7
  #66FCF1
  #45A29E
 */

* {
  font-family: 'Play', sans-serif;
}

:root {
  --main-bg-color: #0B0C10;
  --main-text-color: #C5C6C7;
  --main-title-color: #66FCF1;
  --secondary-bg-color: #1F2833;
  --secondary-title-color: #45A29E;
}

body {
  background-color: var(--main-bg-color);

  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
  sans-serif;
  margin: 0;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
  monospace;
}

/*
    Scrollbar
*/
::-webkit-scrollbar {
  background: #FFC914;
}

::-webkit-scrollbar-button{
  background: #2E282A;
}

::-webkit-scrollbar-thumb{
  background: #2E282A;
}

::-webkit-scrollbar-corner{
  background: #2E282A;
}

